# git-agents

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: LAYERS.md  LAYER_ONE.md  PLAN.md  RUNNING_TESTS.md  TEAM_TOML.md
git_agents/: __init__.py  cli.py  dashboard.py
git_agents/runtime/: AGENTS.md  default.team
git_agents/runtime/roles/: committer.md  console.md  planner.md  reviewer.md
git_agents/runtime/tools/: README.md  agent  agent-pi-interactive  git-agents-ui  run_git_agents
git_agents/runtime/tools/git-agents-public/: app.js  index.html  styles.css
git_agents/templates/: AGENTS.md  team.toml
git_agents/templates/roles/: console.md  implementer.md
man/: git-agents.1
tests/: test_cli.py  test_packaging.py
