[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "git-agents"
version = "0.1.0"
description = "Git-native coding agent workflow extension"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "git-agents contributors" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Version Control :: Git",
]
dependencies = []

[project.scripts]
git-agents = "git_agents.cli:main"

[project.urls]
Homepage = "https://github.com/glguida/git-agents"
Repository = "https://github.com/glguida/git-agents"

[tool.setuptools.packages.find]
include = ["git_agents*"]

[tool.setuptools.package-data]
git_agents = [
  "templates/AGENTS.md",
  "templates/roles/*.md",
  "templates/team.toml",
  "runtime/AGENTS.md",
  "runtime/default.team",
  "runtime/bin/*",
  "runtime/roles/*.md",
  "runtime/tools/*",
  "runtime/tools/git-agents-public/*",
]

[tool.setuptools.data-files]
"share/man/man1" = ["man/git-agents.1"]

[tool.pytest.ini_options]
testpaths = ["tests"]
